--- a/core/templates/login.html
+++ b/core/templates/login.html
@@ -5,7 +5,7 @@
         {% block content %}
         <div id="content" class="center"> 
                 <h1>Let's get started!</h1></br>
-                <button class="big">register</button>
+                <a class="button big" href="/register/">register</a>
                 <h2>Already got an account?</h2>
 
                 <form id="login" action="" method="post">
