--- a/core/templates/register.html
+++ b/core/templates/register.html
@@ -1,5 +1,9 @@
-{% extends "base.html" %}
+{% extends "base-other.html" %}
 {% block content %}
+<div class="password-reset">
+<h1 class="title">Create an account</h1>
+<h2 class="description">It's free and easy!</h2>
+<div class="password-reset">
 <div class="content">
         <div class="form">
                 <form action="" method="post">
@@ -33,5 +37,6 @@
                         <p><input type="submit" alt="Register" /></p>
                 </form>
         </div>
+</div>
 </div>
 {% endblock %}
